@@ -1,2 +1,3 @@
 [B]Version 1.1.108[/B]
 - pornhoarder - fix search, studios, categories
+- stripchat - fix listing
